prout qui vibre

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameInstanceClass=/Game/main/BP_GameInstance.BP_GameInstance_C
+GlobalDefaultGameMode=/Game/main/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
