--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Alexandre.Alexandre
 GameInstanceClass=/Game/main/BP_GameInstance.BP_GameInstance_C
 GlobalDefaultGameMode=/Game/main/BP_GameMode.BP_GameMode_C
+EditorStartupMap=/Game/Alexandre.Alexandre
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
